--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.0.9",
     "@angular/material": "^11.1.0",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "firebase": "^8.2.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
