--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,25 @@
 version: 0.2
 
+env:
+    variables:
+        CACHE_CONTROL: "86400"
+        S3_BUCKET: "http://s3-us-east-2.amazonaws.com/altrusight-build"
+        BUILD_FOLDER: "dist"
 phases:
   install:
     runtime-versions:
-      nodejs: 10
+        nodejs: 10
     commands:
-      - echo Installing angular cli...
-      - npm install -g @angular/cli
-      - yarn add @angular-devkit/build-angular --dev
+        - echo Installing source NPM dependencies...
+        - npm install
+        - npm install -g @angular/cli
   build:
     commands:
-      - echo Build started...
-      - ng build --prod
+        - echo Build started 
+        - ng build
 artifacts:
-  files:
-    - dist/**/*
-    - appspec.yml
+    files:
+        - '**/*'
+        - appspec.yml
+    base-directory: 'dist*'
+    discard-paths: yes
