--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,6 @@ phases:
         - ng build
 artifacts:
     files:
-        - '**/*'
-        - appspec.yml
-    base-directory: 'dist*'
+        - 'dist/**/*'
+        - 'appspec.yml'
     discard-paths: yes
