--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,6 @@ env:
     variables:
         CACHE_CONTROL: "86400"
         S3_BUCKET: "http://s3-us-east-2.amazonaws.com/altrusight-build"
-        BUILD_FOLDER: "dist"
 phases:
   install:
     runtime-versions:
@@ -19,6 +18,6 @@ phases:
         - ng build
 artifacts:
     files:
-        - 'dist/**/*'
-        - 'appspec.yml'
+        - "dist/**/*"
+        - "appspec.yml"
     discard-paths: yes
